# shiromana-rs

./: .gitignore  Cargo.toml  README.md
patches/: some_unusable_patch.patch
plugin_test/: Makefile  plugin.h  plugin_test.c
src/: lib.rs  misc.rs
src/media/: fmt.rs  media.rs  mod.rs  thumbnail.rs
src/misc/: error.rs  hash.rs  lock.rs  mod.rs  plugin.rs  tools.rs  uuid.rs
src/plugin/: misc.rs  mod.rs  plugin_manager.rs  shared_library.rs
