[package]
name = "shiromana-rs"
version = "0.1.0"
authors = ["Oyami-Srk <hhx.xxm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rusqlite = "0.24.2"
# rusqlite use HEAD version for some useful feature (such as ToSql trait for u64)
rusqlite = { git = "https://github.com/rusqlite/rusqlite", features = ["chrono"] }
uuid = { version = "0.8", features = ["serde", "v4", "v1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.9"
sha2 = "0.9"
md-5 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
num = "0.3"
num-derive = "0.3"
num-traits = "0.2"
textwrap = "0.13"
regex = "1"
lazy_static = "1.4"
image = "0.23"