[package]
name = "shiromana-rs"
version = "1.0.1"
authors = ["Oyami-Srk <hhx.xxm@gmail.com>"]
edition = "2018"

[features]
default = []
no-duplication-in-series = []

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
# rusqlite = "0.24.2"
# rusqlite use HEAD version for some useful feature (such as ToSql trait for u64)
# rusqlite = { git = "https://github.com/rusqlite/rusqlite", features = ["chrono", "blob"] }
rusqlite = {version = "0.26.1", features = ["chrono", "blob"]}
uuid = { version = "0.8", features = ["serde", "v4", "v1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.9"
sha2 = "0.9"
md-5 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
num = "0.4.0"
num-derive = "0.3"
num-traits = "0.2"
textwrap = "0.14.2"
regex = "1"
lazy_static = "1.4"
image = "0.23"
blake3 = "1.0.0"
semver = "1.0.4"
r2d2 = "0.8.9"
r2d2_sqlite = "0.19.0"